--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -313,6 +313,33 @@
     "#model = torch.hub.load('ultralytics/yolov5', 'yolov5s', pretrained=True)\n",
     "model = attention_based_captioner()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[2, 5],\n",
+      "        [3, 2]])\n",
+      "tensor([[2, 2],\n",
+      "        [3, 5]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "\n",
+    "a = torch.tensor([[2, 5], \n",
+    "             [3, 2]])\n",
+    "print(a)\n",
+    "print(torch.sort(a, dim=0)[0])\n",
+    "\n",
+    "#there's no way to get what i want it seems"
+   ]
   }
  ],
  "metadata": {
