--- a/notebooks/transformer.ipynb
+++ b/notebooks/transformer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,19 +127,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "EOS = \"_EOS_\"\n",
     "UNK = \"_UNK_\"\n",
     "STR = \"_START_\"\n",
-    "LATENT_SIZE = 128"
+    "LATENT_SIZE = 1024"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,63 +187,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class MultiHeadAttention(nn.Module):\n",
-    "    def __init__(self, d_model, num_heads):\n",
-    "        super(MultiHeadAttention, self).__init__()\n",
-    "        pass"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Encoder(nn.Module):\n",
-    "    def __init__(self, dict_size, *args, **kwargs) -> None:\n",
-    "        super().__init__(*args, **kwargs)\n",
-    "        pass"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Decoder(nn.Module):\n",
-    "    def __init__(self, dict_size, *args, **kwargs) -> None:\n",
-    "        super().__init__(*args, **kwargs)\n",
-    "        pass"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Transformer(nn.Module):\n",
-    "    def __init__(self, dict_size, *args, **kwargs) -> None:\n",
-    "        super().__init__(*args, **kwargs)\n",
-    "        pass"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def train_model(model, epochs, criterion):\n",
-    "    optimizer = Adam(model.parameters())\n",
-    "    for epoch in range(epochs):\n",
-    "        pass\n",
-    "    "
+    "nn.MultiheadAttention(LATENT_SIZE, 4)"
    ]
   }
  ],
@@ -263,7 +211,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
